fixed bulletin page and removed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,8 @@
   margin: 0;
   padding: 0;
 }
+
+/* hide scrollbar for chrome, safari and opera */
+*::-webkit-scrollbar {
+  display: none;
+}
